docs/api/qiskit-ibm-runtime/0.44/transpiler.mdx
---
title: passes (v0.44)
description: API reference for qiskit_ibm_runtime.transpiler.passes in qiskit-ibm-runtime v0.44
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit_ibm_runtime.transpiler.passes
---

<span id="transpiler-passes-qiskit-ibm-runtime-transpiler-passes" />

<span id="module-qiskit_ibm_runtime.transpiler.passes" />

# Transpiler passes

`qiskit_ibm_runtime.transpiler.passes`

A collection of transpiler passes. Refer to [/guides/transpile](/docs/guides/transpile) to learn more about transpilation and passes.

|                                                                                                                                                    |                                                                                                        |
| -------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------ |
| [`ConvertIdToDelay`](transpiler-passes-convert-id-to-delay "qiskit_ibm_runtime.transpiler.passes.ConvertIdToDelay")                                | Convert `qiskit.circuit.library.standard_gates.IGate` to a delay of the corresponding length.          |
| [`ConvertISAToClifford`](transpiler-passes-convert-isa-to-clifford "qiskit_ibm_runtime.transpiler.passes.ConvertISAToClifford")                    | Convert the gates of an ISA circuit to Clifford gates.                                                 |
| [`FoldRzzAngle`](transpiler-passes-fold-rzz-angle "qiskit_ibm_runtime.transpiler.passes.FoldRzzAngle")                                             | Fold Rzz gate angle into calibrated range of 0-pi/2 with local gate tweaks.                            |
| [`ConvertToMidCircuitMeasure`](transpiler-passes-convert-to-mid-circuit-measure "qiskit_ibm_runtime.transpiler.passes.ConvertToMidCircuitMeasure") | This pass replaces terminal measures in the middle of the circuit with MidCircuitMeasure instructions. |

See [`qiskit_ibm_runtime.transpiler.passes.scheduling`](transpiler-passes-scheduling#module-qiskit_ibm_runtime.transpiler.passes.scheduling "qiskit_ibm_runtime.transpiler.passes.scheduling") for a collection of scheduling passes.

